--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Users/Details.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Users/Details.cshtml
@@ -9,22 +9,34 @@
 
 
 <section class="mx-auto bg-white w-2/3 px-20 py-24 border-x border-gray-300 min-h-screen flex flex-col gap-20">
-    <div class="flex gap-10 items-end">
-        @* replace with profile photo *@
-        <div class="border border-gray-400 rounded-sm p-4 w-64 h-64"></div>
+    <div class="flex gap-10 items-end justify-between">
+        <div class="flex gap-10 items-end">
+            @* replace with profile photo *@
+            <div class="border border-gray-400 rounded-sm p-4 w-64 h-64"></div>
 
-        <div class="flex flex-col gap-2 w-1/3">
-            <div class="flex items-center justify-between">
-                <h1 class="font-bold text-3xl text-gray-700">@Model.Name</h1>
-                @if (CurrentUser.UserId == Model.Id)
-                {
-                    <nav>
-                        <a href="/users/@CurrentUser.UserId/edit" class="text-gray-500 font-semibold">Update</a>
-                    </nav>
-                }
+            @* name and id *@
+            <div class="flex flex-col gap-2 w-1/3">
+                <div class="flex items-center justify-between">
+                    <h1 class="font-bold text-3xl text-gray-700">@Model.Name</h1>
+                    @if (CurrentUser.UserId == Model.Id)
+                    {
+                        <nav>
+                            <a href="/users/@CurrentUser.UserId/edit" class="text-gray-500 font-semibold">Update</a>
+                        </nav>
+                    }
+                </div>
+
+                <p>@Model.Username</p>
             </div>
+        </div>
 
-            <p>@Model.Username</p>
+        <div>
+            <form method="post" asp-controller="Conversations" asp-action="StartPrivateConversation">
+                <input type="hidden" name="targetUserId" value="@Model.Id">
+                <button type="submit" class="px-4 py-2 text-white bg-gray-900 rounded-sm cursor-pointer text-sm">
+                    Message
+                </button>
+            </form>
         </div>
     </div>
 
